// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Clients confirms & clears list 1`] = `
<div-page
  data-testid="tableClients"
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            Ref
          </th>
          <th>
            Name
          </th>
          <th>
            Phone
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text />
          </td>
          <td>
            <column-text>
              clientA
            </column-text>
          </td>
          <td>
            <column-text>
              1235551234
            </column-text>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit1"
              type="button"
            >
              Edit
            </button>
            <button
              class="btn btn-primary"
              data-testid="buttonDel1"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div-page>
`;

exports[`Clients confirms & clears list 2`] = `
<div-page
  data-testid="tableClients"
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            Ref
          </th>
          <th>
            Name
          </th>
          <th>
            Phone
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text />
          </td>
          <td>
            <column-text>
              clientA
            </column-text>
          </td>
          <td>
            <column-text>
              1235551234
            </column-text>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit1"
              type="button"
            >
              Edit
            </button>
            <button
              class="btn btn-primary"
              data-testid="buttonDel1"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Confirm
  </button>
</div-page>
`;

exports[`Clients confirms & clears list 3`] = `
<div-page
  data-testid="tableClients"
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            Ref
          </th>
          <th>
            Name
          </th>
          <th>
            Phone
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div-page>
`;

exports[`Clients enters another into list 1`] = `
<div-page
  data-testid="tableClients"
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            Ref
          </th>
          <th>
            Name
          </th>
          <th>
            Phone
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text />
          </td>
          <td>
            <column-text>
              clientA
            </column-text>
          </td>
          <td>
            <column-text>
              1235551234
            </column-text>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit1"
              type="button"
            >
              Edit
            </button>
            <button
              class="btn btn-primary"
              data-testid="buttonDel1"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div-page>
`;

exports[`Clients enters another into list 2`] = `
<div-page
  data-testid="tableClients"
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            Ref
          </th>
          <th>
            Name
          </th>
          <th>
            Phone
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text />
          </td>
          <td>
            <column-text>
              clientA
            </column-text>
          </td>
          <td>
            <column-text>
              1235551234
            </column-text>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit1"
              type="button"
            >
              Edit
            </button>
            <button
              class="btn btn-primary"
              data-testid="buttonDel1"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
        <tr>
          <td>
            <column-text>
              3
            </column-text>
          </td>
          <td>
            <column-text>
              clientC
            </column-text>
          </td>
          <td>
            <column-text>
              0005551113
            </column-text>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit2"
              type="button"
            >
              Edit
            </button>
            <button
              class="btn btn-primary"
              data-testid="buttonDel2"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div-page>
`;

exports[`Clients enters into list 1`] = `
<div-page
  data-testid="tableClients"
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            Ref
          </th>
          <th>
            Name
          </th>
          <th>
            Phone
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text>
              2
            </column-text>
          </td>
          <td>
            <column-text>
              clientB
            </column-text>
          </td>
          <td>
            <column-text>
              0005551112
            </column-text>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit1"
              type="button"
            >
              Edit
            </button>
            <button
              class="btn btn-primary"
              data-testid="buttonDel1"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div-page>
`;

exports[`Clients renders page 1`] = `
<div-page
  data-testid="tableClients"
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            Ref
          </th>
          <th>
            Name
          </th>
          <th>
            Phone
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div-page>
`;

exports[`Invoices renders page 1`] = `
<div-page
  data-testid="tableInvoices"
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            InvoiceRef
          </th>
          <th>
            ClientRef
          </th>
          <th>
            Date
          </th>
          <th>
            Summary
          </th>
          <th>
            Total
          </th>
          <th>
            Send
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div-page>
`;

exports[`Receipts renders page 1`] = `
<div-page
  data-testid="tableReceipts"
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            Ref
          </th>
          <th>
            Date
          </th>
          <th>
            Client
          </th>
          <th>
            Total
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div-page>
`;

exports[`Settings renders page 1`] = `
<div-page
  data-testid="tableSettings"
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <tbody>
        <tr>
          <td>
            <div>
              <div>
                <b>
                  Client Prefix
                </b>
              </div>
              <div>
                <column-text>
                  C
                </column-text>
              </div>
            </div>
          </td>
          <td>
            <div>
              <div>
                <b>
                  Client Next
                </b>
              </div>
              <div>
                <column-text>
                  1
                </column-text>
              </div>
            </div>
          </td>
          <td>
            <div>
              <div>
                <b>
                  Invoice Prefix
                </b>
              </div>
              <div>
                <column-text>
                  I
                </column-text>
              </div>
            </div>
          </td>
          <td>
            <div>
              <div>
                <b>
                  Invoice Next
                </b>
              </div>
              <div>
                <column-text>
                  1
                </column-text>
              </div>
            </div>
          </td>
          <td>
            <div>
              <div>
                <b>
                  Receipt Prefix
                </b>
              </div>
              <div>
                <column-text>
                  R
                </column-text>
              </div>
            </div>
          </td>
          <td>
            <div>
              <div>
                <b>
                  Receipt Next
                </b>
              </div>
              <div>
                <column-text>
                  1
                </column-text>
              </div>
            </div>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit1"
              type="button"
            >
              Edit
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div-page>
`;

exports[`Statements renders page 1`] = `
<div-page
  data-testid="tableStatements"
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            ClientRef
          </th>
          <th>
            BalanceDue
          </th>
          <th>
            Send
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
</div-page>
`;
